Fixed 1px overspill of the main container caused by all around padding.

--- a/compass/shCore.scss
+++ b/compass/shCore.scss
@@ -55,8 +55,6 @@
 	width: 100% !important;
 	margin: 1em 0 1em 0 !important;
 	
-	// adds a little border on top and bottom
-	padding: 1px !important;
 	position: relative !important;
 	overflow: auto !important;
 	font-size: 1em !important;
